# plymouth

./: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
debian/: changelog  changelog.ubuntu.old  control  libplymouth4.symbols  plymouth-theme-ubuntu-logo.postinst  plymouth-theme-ubuntu-logo.prerm  plymouth-theme-ubuntu-text.postinst  plymouth-themes.install  plymouth-themes.postinst  plymouth.install  plymouth.links  plymouth.postinst  rules  watch
debian/local/: plymouth.hook  plymouth.init-bottom
debian/patches/: 0001-awk.patch  0002-stderr.patch  0004-return-code.patch  0005-cmdline.patch  0007-udev-seat-tag.patch  0008-show-delay.patch  avoid-sigpipe.patch  details-remove-separator.patch  details-short-prompt.patch  details-update-status.patch  drop-systemd-vconsole-setup-service.patch  fix-split-writes.patch  initramfsless-boot.patch  misc-changes.patch  series  ubuntu-add-splash-option.patch  ubuntu-logo.patch  ubuntu-text.patch
debian/source/: include-binaries
docs/: Makefile.in  plymouth1.xml  plymouthd.xml
images/: Makefile.in
scripts/: Makefile.in  plymouth-populate-initrd.in  plymouth-set-default-theme.in
src/: Makefile.am  Makefile.in  main.c  ply-boot-server.c  plymouthd.conf  plymouthd.defaults
src/client/: Makefile.in  ply-boot-client.c  plymouth.c
src/libply-splash-core/: Makefile.am  Makefile.in  ply-boot-splash-plugin.h  ply-boot-splash.c  ply-boot-splash.h  ply-device-manager.c  ply-device-manager.h  ply-keyboard.c  ply-keyboard.h  ply-pixel-buffer.c  ply-pixel-buffer.h  ply-pixel-display.c  ply-pixel-display.h  ply-renderer-plugin.h  ply-renderer.c  ply-renderer.h  ply-seat.c  ply-seat.h  ply-terminal.c  ply-terminal.h  ply-text-display.c  ply-text-display.h
src/libply-splash-graphics/: Makefile.am  (+6 more)
systemd-units/: Makefile.am  Makefile.in  plymouth-halt.service.in  plymouth-kexec.service.in  plymouth-poweroff.service.in  plymouth-reboot.service.in  plymouth-start.service.in  systemd-ask-password-plymouth.service.in
themes/: Makefile.am  Makefile.in
themes/ubuntu-logo/: Makefile.am  ubuntu-logo.plymouth.in  ubuntu-logo.script  ubuntu-logo.script.in
(+63 files in other folders)
